public/assets/css/less/master.less
/*!
 * Master CSS template for Laravel-4-Bootstrap-Starter-Site
 *
 */

/*!
 * Bootstrap v3.0.0
 *
 * Copyright 2013 Twitter, Inc
 * Licensed under the Apache License v2.0
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Designed and built with all the love in the world by @mdo and @fat.
 */

// Core variables and mixins
@import "../../../../vendor/twbs/bootstrap/less/variables.less";
@import "variables-custom.less"; // Modify this for custom colors, font-sizes, etc

@import "../../../../vendor/twbs/bootstrap/less/mixins.less";

// Reset
@import "../../../../vendor/twbs/bootstrap/less/normalize.less";
@import "../../../../vendor/twbs/bootstrap/less/print.less";

// Core CSS
@import "../../../../vendor/twbs/bootstrap/less/scaffolding.less";
@import "../../../../vendor/twbs/bootstrap/less/type.less";
@import "../../../../vendor/twbs/bootstrap/less/code.less";
@import "../../../../vendor/twbs/bootstrap/less/grid.less";
@import "../../../../vendor/twbs/bootstrap/less/tables.less";
@import "../../../../vendor/twbs/bootstrap/less/forms.less";
@import "../../../../vendor/twbs/bootstrap/less/buttons.less";

// Components
@import "../../../../vendor/twbs/bootstrap/less/component-animations.less";
@import "../../../../vendor/twbs/bootstrap/less/glyphicons.less";
@import "../../../../vendor/twbs/bootstrap/less/dropdowns.less";
@import "../../../../vendor/twbs/bootstrap/less/button-groups.less";
@import "../../../../vendor/twbs/bootstrap/less/input-groups.less";
@import "../../../../vendor/twbs/bootstrap/less/navs.less";
@import "../../../../vendor/twbs/bootstrap/less/navbar.less";
@import "../../../../vendor/twbs/bootstrap/less/breadcrumbs.less";
@import "../../../../vendor/twbs/bootstrap/less/pagination.less";
@import "../../../../vendor/twbs/bootstrap/less/pager.less";
@import "../../../../vendor/twbs/bootstrap/less/labels.less";
@import "../../../../vendor/twbs/bootstrap/less/badges.less";
@import "../../../../vendor/twbs/bootstrap/less/jumbotron.less";
@import "../../../../vendor/twbs/bootstrap/less/thumbnails.less";
@import "../../../../vendor/twbs/bootstrap/less/alerts.less";
@import "../../../../vendor/twbs/bootstrap/less/progress-bars.less";
@import "../../../../vendor/twbs/bootstrap/less/media.less";
@import "../../../../vendor/twbs/bootstrap/less/list-group.less";
@import "../../../../vendor/twbs/bootstrap/less/panels.less";
@import "../../../../vendor/twbs/bootstrap/less/wells.less";
@import "../../../../vendor/twbs/bootstrap/less/close.less";


// Components w/ JavaScript
@import "../../../../vendor/twbs/bootstrap/less/modals.less";
@import "../../../../vendor/twbs/bootstrap/less/tooltip.less";
@import "../../../../vendor/twbs/bootstrap/less/popovers.less";
@import "../../../../vendor/twbs/bootstrap/less/carousel.less";

// Utility classes
@import "../../../../vendor/twbs/bootstrap/less/utilities.less";
@import "../../../../vendor/twbs/bootstrap/less/responsive-utilities.less";

// -------------------------------------------------------------
// -------------------------------------------------------------
// -------------------------------------------------------------
// -------------------------------------------------------------

/*!
 * Custom CSS
 *
 */

/* Wrapper for page content to push down footer */
#wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    /* Negative indent footer by it's height */
    margin: 0 auto -60px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
    height: 60px;
}
#footer {
    background-color: #f5f5f5;
}


#wrap > .container {
    padding-top: 60px;
}
.container .credit {
    margin: 20px 0;
}

/*!
 * Semantics based on Twitter Bootstrap
 *
 */

.btn-cancel {
	.btn;
	.btn-warning;
}

.table {
    border-collapse: collapse;
}

.pagination {
    margin: 0;
}

/* Nav bar */

.navbar .divider-vertical {
  height: 40px;
  margin: 0 9px;
  border-right: 1px solid #ffffff;
  border-left: 1px solid #f2f2f2;
}

  .UoGLogo{
    position: absolute;
    z-index: 2000;
    margin-top: -60px;
    margin-left: -14px;
    color: #EDB613;
  }

  .menu-right{
    float: none;
  }

  @media (min-width: @screen-sm) {
    .UoGLogo {
      margin-left: 11px;
    }
    .menu-right{
      float: right !important;
    }
  }

  .navbar {
    border: none;
  }

  .navbar-inverse  {
    background-color: rgb(55, 125, 141);
  }

  /** Nav-bar Menu Items **/
  @media (min-width: @screen-sm) {
    .navbar-inverse .navbar-nav .home {
      margin-left: 95px;
    }
  }
  .navbar-inverse .navbar-nav > li > a{
    color: #FFF;
  }
  .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus{
    color: #EDB613;
    background-color: #090909;
  }

  .navbar-inverse .navbar-nav > .active > a{
    color: #fff;
    background-color: #090909;
  }

  .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
    color: #EDB613;
    background-color: #090909;
  }

  @media (min-width: 768px) and (max-width: 992px) {
    .container {
      width: 914px;
    }
  }

  .navbar-collapse {
    max-height: 345px;
  }

